--- a/css/codeicons.css
+++ b/css/codeicons.css
@@ -33,193 +33,214 @@
 .codeicon-apache:before {
   content: "\e902";
 }
-.codeicon-atom:before {
+.codeicon-apple:before {
   content: "\e903";
 }
-.codeicon-bitbucket:before {
+.codeicon-atom:before {
   content: "\e904";
 }
-.codeicon-bootstrap:before {
+.codeicon-bitbucket:before {
   content: "\e905";
 }
-.codeicon-bower:before {
+.codeicon-bootstrap:before {
   content: "\e906";
 }
-.codeicon-bower-line:before {
+.codeicon-bower:before {
   content: "\e907";
 }
-.codeicon-chrome:before {
+.codeicon-bower-line:before {
   content: "\e908";
 }
-.codeicon-cnormal:before {
+.codeicon-chrome:before {
   content: "\e909";
 }
-.codeicon-cnormal-line:before {
+.codeicon-cnormal:before {
   content: "\e90a";
 }
-.codeicon-codeigniter:before {
+.codeicon-cnormal-line:before {
   content: "\e90b";
 }
-.codeicon-codepen:before {
+.codeicon-codeigniter:before {
   content: "\e90c";
 }
-.codeicon-codrops:before {
+.codeicon-codepen:before {
   content: "\e90d";
 }
-.codeicon-coffeescript:before {
+.codeicon-codrops:before {
   content: "\e90e";
 }
-.codeicon-composer:before {
+.codeicon-coffeescript:before {
   content: "\e90f";
 }
-.codeicon-cplusplus:before {
+.codeicon-composer:before {
   content: "\e910";
 }
-.codeicon-cplusplus-line:before {
+.codeicon-cplusplus:before {
   content: "\e911";
 }
-.codeicon-creativecommons:before {
+.codeicon-cplusplus-line:before {
   content: "\e912";
 }
-.codeicon-css3:before {
+.codeicon-creativecommons:before {
   content: "\e913";
 }
-.codeicon-debian:before {
+.codeicon-css3:before {
   content: "\e914";
 }
-.codeicon-docker:before {
+.codeicon-csstricks:before {
   content: "\e915";
 }
-.codeicon-doctrine:before {
+.codeicon-debian:before {
   content: "\e916";
 }
-.codeicon-doctrine-line:before {
+.codeicon-docker:before {
   content: "\e917";
 }
-.codeicon-dropbox:before {
+.codeicon-doctrine:before {
   content: "\e918";
 }
-.codeicon-firefox:before {
+.codeicon-doctrine-line:before {
   content: "\e919";
 }
-.codeicon-git:before {
+.codeicon-dropbox:before {
   content: "\e91a";
 }
-.codeicon-github:before {
+.codeicon-firefox:before {
   content: "\e91b";
 }
-.codeicon-gitlab:before {
+.codeicon-gimp:before {
   content: "\e91c";
 }
-.codeicon-grunt:before {
+.codeicon-git:before {
   content: "\e91d";
 }
-.codeicon-grunt-line:before {
+.codeicon-github:before {
   content: "\e91e";
 }
-.codeicon-gulp:before {
+.codeicon-gitlab:before {
   content: "\e91f";
 }
-.codeicon-html5:before {
+.codeicon-go:before {
   content: "\e920";
 }
-.codeicon-illustrator:before {
+.codeicon-grunt:before {
   content: "\e921";
 }
-.codeicon-in2com:before {
+.codeicon-grunt-line:before {
   content: "\e922";
 }
-.codeicon-indesign:before {
+.codeicon-gulp:before {
   content: "\e923";
 }
-.codeicon-ionic:before {
+.codeicon-heroku:before {
   content: "\e924";
 }
-.codeicon-java:before {
+.codeicon-html5:before {
   content: "\e925";
 }
-.codeicon-javascript:before {
+.codeicon-illustrator:before {
   content: "\e926";
 }
-.codeicon-jquery:before {
+.codeicon-in2com:before {
   content: "\e927";
 }
-.codeicon-laravel:before {
+.codeicon-indesign:before {
   content: "\e928";
 }
-.codeicon-less:before {
+.codeicon-ionic:before {
   content: "\e929";
 }
-.codeicon-mysql:before {
+.codeicon-java:before {
   content: "\e92a";
 }
-.codeicon-nodejs:before {
+.codeicon-javascript:before {
   content: "\e92b";
 }
-.codeicon-npm:before {
+.codeicon-jquery:before {
   content: "\e92c";
 }
-.codeicon-photoshop:before {
+.codeicon-laravel:before {
   content: "\e92d";
 }
-.codeicon-php:before {
+.codeicon-less:before {
   content: "\e92e";
 }
-.codeicon-phpstorm:before {
+.codeicon-linux:before {
   content: "\e92f";
 }
-.codeicon-premierepro:before {
+.codeicon-mysql:before {
   content: "\e930";
 }
-.codeicon-rails:before {
+.codeicon-nodejs:before {
   content: "\e931";
 }
-.codeicon-react:before {
+.codeicon-npm:before {
   content: "\e932";
 }
-.codeicon-redhat:before {
+.codeicon-photoshop:before {
   content: "\e933";
 }
-.codeicon-ruby:before {
+.codeicon-php:before {
   content: "\e934";
 }
-.codeicon-sass:before {
+.codeicon-phpstorm:before {
   content: "\e935";
 }
-.codeicon-slimphp:before {
+.codeicon-premierepro:before {
   content: "\e936";
 }
-.codeicon-sourcetree:before {
+.codeicon-rails:before {
   content: "\e937";
 }
-.codeicon-ssh:before {
+.codeicon-react:before {
   content: "\e938";
 }
-.codeicon-sublime:before {
+.codeicon-redhat:before {
   content: "\e939";
 }
-.codeicon-symfony:before {
+.codeicon-ruby:before {
   content: "\e93a";
 }
-.codeicon-terminal:before {
+.codeicon-sass:before {
   content: "\e93b";
 }
-.codeicon-trello:before {
+.codeicon-slimphp:before {
   content: "\e93c";
 }
-.codeicon-ubuntu:before {
+.codeicon-sourcetree:before {
   content: "\e93d";
 }
-.codeicon-vim:before {
+.codeicon-ssh:before {
   content: "\e93e";
 }
-.codeicon-w3c:before {
+.codeicon-sublime:before {
   content: "\e93f";
 }
-.codeicon-wordpress:before {
+.codeicon-swift:before {
   content: "\e940";
 }
-.codeicon-zend:before {
+.codeicon-symfony:before {
   content: "\e941";
+}
+.codeicon-terminal:before {
+  content: "\e942";
+}
+.codeicon-trello:before {
+  content: "\e943";
+}
+.codeicon-ubuntu:before {
+  content: "\e944";
+}
+.codeicon-vim:before {
+  content: "\e945";
+}
+.codeicon-w3c:before {
+  content: "\e946";
+}
+.codeicon-wordpress:before {
+  content: "\e947";
+}
+.codeicon-zend:before {
+  content: "\e948";
 }
 
