--- a/css/variables.scss
+++ b/css/variables.scss
@@ -3,67 +3,74 @@ $icomoon-font-path: "fonts" !default;
 $codeicon-android: "\e900";
 $codeicon-angularjs: "\e901";
 $codeicon-apache: "\e902";
-$codeicon-atom: "\e903";
-$codeicon-bitbucket: "\e904";
-$codeicon-bootstrap: "\e905";
-$codeicon-bower: "\e906";
-$codeicon-bower-line: "\e907";
-$codeicon-chrome: "\e908";
-$codeicon-cnormal: "\e909";
-$codeicon-cnormal-line: "\e90a";
-$codeicon-codeigniter: "\e90b";
-$codeicon-codepen: "\e90c";
-$codeicon-codrops: "\e90d";
-$codeicon-coffeescript: "\e90e";
-$codeicon-composer: "\e90f";
-$codeicon-cplusplus: "\e910";
-$codeicon-cplusplus-line: "\e911";
-$codeicon-creativecommons: "\e912";
-$codeicon-css3: "\e913";
-$codeicon-debian: "\e914";
-$codeicon-docker: "\e915";
-$codeicon-doctrine: "\e916";
-$codeicon-doctrine-line: "\e917";
-$codeicon-dropbox: "\e918";
-$codeicon-firefox: "\e919";
-$codeicon-git: "\e91a";
-$codeicon-github: "\e91b";
-$codeicon-gitlab: "\e91c";
-$codeicon-grunt: "\e91d";
-$codeicon-grunt-line: "\e91e";
-$codeicon-gulp: "\e91f";
-$codeicon-html5: "\e920";
-$codeicon-illustrator: "\e921";
-$codeicon-in2com: "\e922";
-$codeicon-indesign: "\e923";
-$codeicon-ionic: "\e924";
-$codeicon-java: "\e925";
-$codeicon-javascript: "\e926";
-$codeicon-jquery: "\e927";
-$codeicon-laravel: "\e928";
-$codeicon-less: "\e929";
-$codeicon-mysql: "\e92a";
-$codeicon-nodejs: "\e92b";
-$codeicon-npm: "\e92c";
-$codeicon-photoshop: "\e92d";
-$codeicon-php: "\e92e";
-$codeicon-phpstorm: "\e92f";
-$codeicon-premierepro: "\e930";
-$codeicon-rails: "\e931";
-$codeicon-react: "\e932";
-$codeicon-redhat: "\e933";
-$codeicon-ruby: "\e934";
-$codeicon-sass: "\e935";
-$codeicon-slimphp: "\e936";
-$codeicon-sourcetree: "\e937";
-$codeicon-ssh: "\e938";
-$codeicon-sublime: "\e939";
-$codeicon-symfony: "\e93a";
-$codeicon-terminal: "\e93b";
-$codeicon-trello: "\e93c";
-$codeicon-ubuntu: "\e93d";
-$codeicon-vim: "\e93e";
-$codeicon-w3c: "\e93f";
-$codeicon-wordpress: "\e940";
-$codeicon-zend: "\e941";
+$codeicon-apple: "\e903";
+$codeicon-atom: "\e904";
+$codeicon-bitbucket: "\e905";
+$codeicon-bootstrap: "\e906";
+$codeicon-bower: "\e907";
+$codeicon-bower-line: "\e908";
+$codeicon-chrome: "\e909";
+$codeicon-cnormal: "\e90a";
+$codeicon-cnormal-line: "\e90b";
+$codeicon-codeigniter: "\e90c";
+$codeicon-codepen: "\e90d";
+$codeicon-codrops: "\e90e";
+$codeicon-coffeescript: "\e90f";
+$codeicon-composer: "\e910";
+$codeicon-cplusplus: "\e911";
+$codeicon-cplusplus-line: "\e912";
+$codeicon-creativecommons: "\e913";
+$codeicon-css3: "\e914";
+$codeicon-csstricks: "\e915";
+$codeicon-debian: "\e916";
+$codeicon-docker: "\e917";
+$codeicon-doctrine: "\e918";
+$codeicon-doctrine-line: "\e919";
+$codeicon-dropbox: "\e91a";
+$codeicon-firefox: "\e91b";
+$codeicon-gimp: "\e91c";
+$codeicon-git: "\e91d";
+$codeicon-github: "\e91e";
+$codeicon-gitlab: "\e91f";
+$codeicon-go: "\e920";
+$codeicon-grunt: "\e921";
+$codeicon-grunt-line: "\e922";
+$codeicon-gulp: "\e923";
+$codeicon-heroku: "\e924";
+$codeicon-html5: "\e925";
+$codeicon-illustrator: "\e926";
+$codeicon-in2com: "\e927";
+$codeicon-indesign: "\e928";
+$codeicon-ionic: "\e929";
+$codeicon-java: "\e92a";
+$codeicon-javascript: "\e92b";
+$codeicon-jquery: "\e92c";
+$codeicon-laravel: "\e92d";
+$codeicon-less: "\e92e";
+$codeicon-linux: "\e92f";
+$codeicon-mysql: "\e930";
+$codeicon-nodejs: "\e931";
+$codeicon-npm: "\e932";
+$codeicon-photoshop: "\e933";
+$codeicon-php: "\e934";
+$codeicon-phpstorm: "\e935";
+$codeicon-premierepro: "\e936";
+$codeicon-rails: "\e937";
+$codeicon-react: "\e938";
+$codeicon-redhat: "\e939";
+$codeicon-ruby: "\e93a";
+$codeicon-sass: "\e93b";
+$codeicon-slimphp: "\e93c";
+$codeicon-sourcetree: "\e93d";
+$codeicon-ssh: "\e93e";
+$codeicon-sublime: "\e93f";
+$codeicon-swift: "\e940";
+$codeicon-symfony: "\e941";
+$codeicon-terminal: "\e942";
+$codeicon-trello: "\e943";
+$codeicon-ubuntu: "\e944";
+$codeicon-vim: "\e945";
+$codeicon-w3c: "\e946";
+$codeicon-wordpress: "\e947";
+$codeicon-zend: "\e948";
 
