--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,76 +1,110 @@
 $icomoon-font-path: "fonts" !default;
 
-$codeicon-android: "\e900";
-$codeicon-angularjs: "\e901";
-$codeicon-apache: "\e902";
-$codeicon-apple: "\e903";
-$codeicon-atom: "\e904";
-$codeicon-bitbucket: "\e905";
-$codeicon-bootstrap: "\e906";
-$codeicon-bower: "\e907";
-$codeicon-bower-line: "\e908";
-$codeicon-chrome: "\e909";
-$codeicon-cnormal: "\e90a";
-$codeicon-cnormal-line: "\e90b";
-$codeicon-codeigniter: "\e90c";
-$codeicon-codepen: "\e90d";
-$codeicon-codrops: "\e90e";
-$codeicon-coffeescript: "\e90f";
-$codeicon-composer: "\e910";
-$codeicon-cplusplus: "\e911";
-$codeicon-cplusplus-line: "\e912";
-$codeicon-creativecommons: "\e913";
-$codeicon-css3: "\e914";
-$codeicon-csstricks: "\e915";
-$codeicon-debian: "\e916";
-$codeicon-docker: "\e917";
-$codeicon-doctrine: "\e918";
-$codeicon-doctrine-line: "\e919";
-$codeicon-dropbox: "\e91a";
-$codeicon-firefox: "\e91b";
-$codeicon-gimp: "\e91c";
-$codeicon-git: "\e91d";
-$codeicon-github: "\e91e";
-$codeicon-gitlab: "\e91f";
-$codeicon-go: "\e920";
-$codeicon-grunt: "\e921";
-$codeicon-grunt-line: "\e922";
-$codeicon-gulp: "\e923";
-$codeicon-heroku: "\e924";
-$codeicon-html5: "\e925";
-$codeicon-illustrator: "\e926";
-$codeicon-in2com: "\e927";
-$codeicon-indesign: "\e928";
-$codeicon-ionic: "\e929";
-$codeicon-java: "\e92a";
-$codeicon-javascript: "\e92b";
-$codeicon-jquery: "\e92c";
-$codeicon-laravel: "\e92d";
-$codeicon-less: "\e92e";
-$codeicon-linux: "\e92f";
-$codeicon-mysql: "\e930";
-$codeicon-nodejs: "\e931";
-$codeicon-npm: "\e932";
-$codeicon-photoshop: "\e933";
-$codeicon-php: "\e934";
-$codeicon-phpstorm: "\e935";
-$codeicon-premierepro: "\e936";
-$codeicon-rails: "\e937";
-$codeicon-react: "\e938";
-$codeicon-redhat: "\e939";
-$codeicon-ruby: "\e93a";
-$codeicon-sass: "\e93b";
-$codeicon-slimphp: "\e93c";
-$codeicon-sourcetree: "\e93d";
-$codeicon-ssh: "\e93e";
-$codeicon-sublime: "\e93f";
-$codeicon-swift: "\e940";
-$codeicon-symfony: "\e941";
-$codeicon-terminal: "\e942";
-$codeicon-trello: "\e943";
-$codeicon-ubuntu: "\e944";
-$codeicon-vim: "\e945";
-$codeicon-w3c: "\e946";
-$codeicon-wordpress: "\e947";
-$codeicon-zend: "\e948";
+$codeicon-amazonwebservices: "\e900";
+$codeicon-android: "\e901";
+$codeicon-angularjs: "\e902";
+$codeicon-apache: "\e903";
+$codeicon-apple: "\e904";
+$codeicon-atom: "\e905";
+$codeicon-babel: "\e906";
+$codeicon-backbonejs: "\e907";
+$codeicon-bitbucket: "\e908";
+$codeicon-bootstrap: "\e909";
+$codeicon-bower: "\e90a";
+$codeicon-bower-line: "\e90b";
+$codeicon-chrome: "\e90c";
+$codeicon-cnormal: "\e90d";
+$codeicon-cnormal-line: "\e90e";
+$codeicon-codeigniter: "\e90f";
+$codeicon-codepen: "\e910";
+$codeicon-codrops: "\e911";
+$codeicon-coffeescript: "\e912";
+$codeicon-composer: "\e913";
+$codeicon-confluence: "\e914";
+$codeicon-cplusplus: "\e915";
+$codeicon-cplusplus-line: "\e916";
+$codeicon-creativecommons: "\e917";
+$codeicon-css3: "\e918";
+$codeicon-csstricks: "\e919";
+$codeicon-cucumber: "\e91a";
+$codeicon-debian: "\e91b";
+$codeicon-django: "\e91c";
+$codeicon-docker: "\e91d";
+$codeicon-doctrine: "\e91e";
+$codeicon-doctrine-line: "\e91f";
+$codeicon-dotnet: "\e920";
+$codeicon-dropbox: "\e921";
+$codeicon-drupal: "\e922";
+$codeicon-filezilla: "\e923";
+$codeicon-firefox: "\e924";
+$codeicon-foundation: "\e925";
+$codeicon-gimp: "\e926";
+$codeicon-git: "\e927";
+$codeicon-github: "\e928";
+$codeicon-gitkraken: "\e929";
+$codeicon-gitlab: "\e92a";
+$codeicon-go: "\e92b";
+$codeicon-gradle: "\e92c";
+$codeicon-grunt: "\e92d";
+$codeicon-grunt-line: "\e92e";
+$codeicon-gulp: "\e92f";
+$codeicon-heroku: "\e930";
+$codeicon-html5: "\e931";
+$codeicon-illustrator: "\e932";
+$codeicon-in2com: "\e933";
+$codeicon-indesign: "\e934";
+$codeicon-inkscape: "\e935";
+$codeicon-ionic: "\e936";
+$codeicon-jasmine: "\e937";
+$codeicon-java: "\e938";
+$codeicon-javascript: "\e939";
+$codeicon-jekyll: "\e93a";
+$codeicon-jekyllsmall: "\e93b";
+$codeicon-jenkins: "\e93c";
+$codeicon-jetbrains: "\e93d";
+$codeicon-jquery: "\e93e";
+$codeicon-krakenjs: "\e93f";
+$codeicon-laravel: "\e940";
+$codeicon-less: "\e941";
+$codeicon-linux: "\e942";
+$codeicon-meteor: "\e943";
+$codeicon-mongodb: "\e944";
+$codeicon-mysql: "\e945";
+$codeicon-nginx: "\e946";
+$codeicon-nodejs: "\e947";
+$codeicon-nodewebkit: "\e948";
+$codeicon-npm: "\e949";
+$codeicon-oracle: "\e94a";
+$codeicon-perl: "\e94b";
+$codeicon-photoshop: "\e94c";
+$codeicon-php: "\e94d";
+$codeicon-phpstorm: "\e94e";
+$codeicon-postgresql: "\e94f";
+$codeicon-premierepro: "\e950";
+$codeicon-python: "\e951";
+$codeicon-rails: "\e952";
+$codeicon-raspberry: "\e953";
+$codeicon-react: "\e954";
+$codeicon-redhat: "\e955";
+$codeicon-ruby: "\e956";
+$codeicon-sass: "\e957";
+$codeicon-sequelize: "\e958";
+$codeicon-slimphp: "\e959";
+$codeicon-sourcetree: "\e95a";
+$codeicon-ssh: "\e95b";
+$codeicon-stackoverflow: "\e95c";
+$codeicon-sublime: "\e95d";
+$codeicon-swift: "\e95e";
+$codeicon-symfony: "\e95f";
+$codeicon-terminal: "\e960";
+$codeicon-trello: "\e961";
+$codeicon-twig: "\e962";
+$codeicon-typescript: "\e963";
+$codeicon-ubuntu: "\e964";
+$codeicon-vim: "\e965";
+$codeicon-w3c: "\e966";
+$codeicon-wordpress: "\e967";
+$codeicon-yaml: "\e968";
+$codeicon-yii: "\e969";
+$codeicon-zend: "\e96a";
 
